feat: better partition